fix alignment of like count

--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -253,6 +253,11 @@ body {
   text-shadow: 1px 1px #fff;
 }
 
+.video-like-count {
+  position: relative;
+  left: 36%;
+}
+
 .likes {
   color: green;
 }
